finished gallery and play section's html

--- a/index.html
+++ b/index.html
@@ -63,14 +63,86 @@
 				<div class="counter">
 					<p>0</p>
 				</div>
-			</div>
+			</div> <!-- end search/cart-->
 				
 		</div>
 	</nav>
 
     <!-- HEADER SECTION -->
 	<header>
-		
+		<div class="wrapper">
+			<div class="headerImgContainer">
+				<img src="./assets/header-image.jpg" alt="A toddler playing with wooden blocks">
+			</div>
+
+			<div class="textContainer">
+				<h3>Handcrafted for kids</h3>
+				<h2>Go on, let them play with wooden blocks.</h2>
+				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar tellus.</p>
+				<a href="#shop" class="shopButton">Shop All</a>
+			</div>
+		</div>
 	</header>
+
+	<!-- MAIN SECTION -->
+	<main id="mainContent">
+		<!-- categories section -->
+		<section class="categories" id="categories">
+			<div class="wrapper">
+				<h2>Categories</h2>
+				<p>Explore our range of range of hand-made toys</p>
+
+				<!-- product gallery -->
+				<div class="categoryGallery">
+					<ul>
+						<li class="items itemOne">
+							<a href="#">
+								<img src="./assets/safari-trio.jpg" alt="Safari wooden toys: giraffe, elephant, and crocodile">
+								<h4>Safari</h4>
+								<p>Land-dwelling African favourites</p>
+							</a>
+						</li> 
+
+						<li class="items itemTwo">
+							<a href="#">
+								<img src="./assets/ocean-trio.jpg" alt="Ocean wooden toys: whale, octocpus, and fish">
+								<h4>Ocean</h4>
+								<p>Adorable Aquatic Characters</p>
+							</a>
+						</li>
+
+						<li class="items itemThree">
+							<a href="#">
+								<img src="./assets/dino-trio.jpg" alt="Dinosaur wooden toys with three different dinosaurs">
+								<h4>Dinos</h4>
+								<p>Meet these Prehistoric Pals</p>
+							</a>
+						</li>
+
+						<li class="items itemFour">
+							<a href="#">
+								<img src="./assets/sale.jpg" alt="A toddler pushing his wooden toy dogs on strings">
+								<h4>Sale</h4>
+								<p>Act quickly and grab these bargains</p>
+							</a>
+						</li> 
+					</ul> 
+				</div> <!-- end product gallery/list items-->
+			</div>
+		</section>
+
+		<!-- let them play secction -->
+		<section class="play" id="play">
+			<div class="wrapper">
+				<div class="playContent">
+					<h3>Learning through doing</h3>
+					<h2>Let them play</h2>
+					<p>Bauris eget lacus, amet mollis felis, sed posuere odio. Justo purus orci ultricies et. Sit etiam porta sed tellus.
+					Cattis pellentesque felis tristique eget purus feugiat massa.</p>
+					<a href="#" class="aboutButton">Learn About Us</a>
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
