--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			</div>
 		</section>
 
-		<!-- let them play secction -->
+		<!-- let them play section -->
 		<section class="play" id="play">
 			<div class="wrapper">
 				<div class="playContent">
@@ -144,5 +144,84 @@
 			</div>
 		</section>
 	</main>
+
+	<!-- FOOTER SECTION -->
+	<footer id="footer" class="footer">
+		<div class="wrapper">
+
+			<div class="footerFlexContainer">
+				<!-- logo -->
+				<a href="#" class="logo">
+					<h4>ToyBox</h4>
+				</a>
+
+				<!-- footer nav container -->
+				<div class="footerNav">
+					<nav>
+						<!-- footer shop list -->
+						<ul class="footerShop">
+							<li>
+								<h5>Shop</h5>
+							</li>
+							<li>
+								<a href="#">Safari</a>
+							</li>
+							<li>
+								<a href="#">Ocean</a>
+							</li>
+							<li>
+								<a href="#">Dinos</a>
+							</li>
+							<li>
+								<a href="#">Sale</a>
+							</li>
+						</ul>
+						<!-- END footer shop list -->
+
+						<!-- footer about list -->
+						<ul class="footerAbout">
+							<li>
+								<h5>Anout</h5>
+							</li>
+							<li>
+								<a href="#">About Us</a>
+							</li>
+							<li>
+								<a href="#">FAQ</a>
+							</li>
+							<li>
+								<a href="#">News</a>
+							</li>
+							<li>
+								<a href="#">Legal</a>
+							</li>
+							<li>
+								<a href="#">Contact</a>
+							</li>
+						</ul>
+						<!-- END footer about list -->
+
+						<!-- footer template link -->
+						<ul class="footerTemplate">
+							<li>
+								<h5>Template</h5>
+							</li>
+							<li>
+								<a href="#">Style Guide</a>
+							</li>
+							<li>
+								<a href="#">Licenses</a>
+							</li>
+							<li>
+								<a href="#">Changelog</a>
+							</li>
+						</ul>
+						<!-- END footer template -->
+					</nav> 
+				</div> <!-- END footerNav container -->
+			</div> <!-- END footerFlexContainer -->
+		</div>
+	</footer>
+	
 </body>
 </html>
