--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Toybox Homepage</title>
+
+	<!-- fontawesome -->
+	<script src="https://kit.fontawesome.com/acf2ac11d5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<!-- SKIP LINK -->
@@ -220,8 +223,39 @@
 					</nav> 
 				</div> <!-- END footerNav container -->
 			</div> <!-- END footerFlexContainer -->
-		</div>
+
+			<!-- social and copyright flex container -->
+			<div class="social">
+
+				<!-- social icon container -->
+				<div class="socialIcons">
+					<a href="#">
+						<i class="fa-brands fa-twitter" aria-hidden="true"></i>
+						<span class="sr-only">Link to Twitter</span>
+					</a>
+
+					<a href="#">
+						<i class="pinterest" aria-hidden="true"></i>
+						<span class="sr-only">Link to Pinterest</span>
+					</a>
+
+					<a href="#">
+						<i class="instagram" aria-hidden="true"></i>
+						<span class="sr-only">Link to Instagram</span>
+					</a>
+
+					<a href="#">
+						<i class="facebook" aria-hidden="true"></i>
+						<span class="sr-only">Link to Facebook</span>
+					</a>
+				</div> <!-- END socialIcons -->
+
+				<div class="copyright">
+					<p>&copy; Copyright Company</p>
+				</div> <!-- END copyright -->
+			</div> <!-- END social icon link -->
+		</div> <!-- end footer wrapper -->
 	</footer>
-	
+
 </body>
 </html>
