--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 	<!-- fontawesome -->
 	<script src="https://kit.fontawesome.com/acf2ac11d5.js" crossorigin="anonymous"></script>
+	<!-- stylesheet -->
+	<link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
 	<!-- SKIP LINK -->
