--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- ANNOUNCEMENT BAR -->
 	<div class="announcements">
 		<div class="wrapper">
-			<p>Complimentary shipping on orders over $50. Discount applied at checkout.</p>
+			<p class="smallCopy">Complimentary shipping on orders over $50. Discount applied at checkout.</p>
 		</div>
 	</div>
 
@@ -84,7 +84,7 @@
 				<h3>Handcrafted for kids</h3>
 				<h2>Go on, let them play with wooden blocks.</h2>
 				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar tellus.</p>
-				<a href="#shop" class="shopButton">Shop All</a>
+				<a href="#shop" class="shopButton button">Shop All</a>
 			</div>
 		</div>
 	</header>
@@ -144,7 +144,7 @@
 					<h2>Let them play</h2>
 					<p>Bauris eget lacus, amet mollis felis, sed posuere odio. Justo purus orci ultricies et. Sit etiam porta sed tellus.
 					Cattis pellentesque felis tristique eget purus feugiat massa.</p>
-					<a href="#" class="aboutButton">Learn About Us</a>
+					<a href="#" class="aboutButton button">Learn About Us</a>
 				</div>
 			</div>
 		</section>
@@ -253,7 +253,7 @@
 				</div> <!-- END socialIcons -->
 
 				<div class="copyright">
-					<p>&copy; Copyright Company</p>
+					<p class="smallCopy">&copy; Copyright Company</p>
 				</div> <!-- END copyright -->
 			</div> <!-- END social icon link -->
 		</div> <!-- end footer wrapper -->
