--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
 		<div class="wrapper">
 			<!-- slide out menu button-->
 			<input type="checkbox" id="openSideMenu">
-			<label for="openSideMenu">
+			<label for="openSideMenu" class="menuButton">
 				<img src="./assets/menu-button.svg" alt="Menu Button">
 			</label>
 
 			<!-- slide out nav content -->
 			<div class="slideOutNav">
-				<button>x</button>
+				<button class="menuClose">x</button>
 
 				<!-- menu content -->
 				<nav>
 					<ul class="mainMenu">
-						<li><a href="">Shop</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">FAQ</a></li>
-						<li><a href="">News</a></li>
-						<li><a href="">Contact</a></li>
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">FAQ</a></li>
+						<li><a href="#">News</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
