--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<img src="./assets/header-image.jpg" alt="A toddler playing with wooden blocks">
 			</div>
 
-			<div class="textContainer">
+			<div class="headerTextContainer">
 				<h3>Handcrafted for kids</h3>
 				<h2>Go on, let them play with wooden blocks.</h2>
 				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar tellus.</p>
@@ -99,7 +99,7 @@
 
 				<!-- product gallery -->
 				<div class="categoryGallery">
-					<ul>
+					<ul class="categoryList">
 						<li class="items itemOne">
 							<a href="#">
 								<img src="./assets/safari-trio.jpg" alt="Safari wooden toys: giraffe, elephant, and crocodile">
