finished play section styling

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 		<!-- let them play section -->
 		<section class="play" id="play">
 			<div class="wrapper">
-				<div class="playContent">
+				<div class="playContainer">
 					<h3>Learning through doing</h3>
 					<h2>Let them play</h2>
 					<p>Bauris eget lacus, amet mollis felis, sed posuere odio. Justo purus orci ultricies et. Sit etiam porta sed tellus.
