--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 			<div class="footerFlexContainer">
 				<!-- logo -->
-				<a href="#" class="logo">
+				<a href="#" class="footerLogo">
 					<h4>ToyBox</h4>
 				</a>
 
@@ -186,7 +186,7 @@
 						<!-- footer about list -->
 						<ul class="footerAbout">
 							<li>
-								<h5>Anout</h5>
+								<h5>About</h5>
 							</li>
 							<li>
 								<a href="#">About Us</a>
@@ -237,17 +237,17 @@
 					</a>
 
 					<a href="#">
-						<i class="pinterest" aria-hidden="true"></i>
+						<i class="fa-brands fa-pinterest" aria-hidden="true"></i>
 						<span class="sr-only">Link to Pinterest</span>
 					</a>
 
 					<a href="#">
-						<i class="instagram" aria-hidden="true"></i>
+						<i class="fa-brands fa-instagram" aria-hidden="true"></i>
 						<span class="sr-only">Link to Instagram</span>
 					</a>
 
 					<a href="#">
-						<i class="facebook" aria-hidden="true"></i>
+						<i class="fa-brands fa-facebook" aria-hidden="true"></i>
 						<span class="sr-only">Link to Facebook</span>
 					</a>
 				</div> <!-- END socialIcons -->
