--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<li><a href="#">About</a></li>
 						<li><a href="#">FAQ</a></li>
 						<li><a href="#">News</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="./contact.html">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -201,7 +201,7 @@
 								<a href="#">Legal</a>
 							</li>
 							<li>
-								<a href="#">Contact</a>
+								<a href="./contact.html">Contact</a>
 							</li>
 						</ul>
 						<!-- END footer about list -->
