finished form styling

--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                     <label for="terms">I agree to the Terms & Conditions</label>
                 </fieldset>
 
-                <button type="submit">Send Message</button>
+                <button type="submit" class="shopButton button">Send Message</button>
             </form> <!-- END contact form-->
         </div> <!-- END wrapper-->
     </main>
